# pyAutoRef

./: .gitattributes  LICENSE  README.md  setup.cfg
src/pyAutoRef/: MANIFEST.in  autoref.py  normalization.py  object_detection.py  post_processing.py  pre_processing.py  utils.py
src/pyAutoRef.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
