[metadata]
name = pyAutoRef
version = 2.0.0
author = Mohammed R. S. Sunoqrot
author_email = mohammed.sunoqrot@ntnu.no
description = Python pakage to perfom AutoRef (prostate T2w MRI dual reference tissue [fat and muscle] normalization).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohammedSunoqrot/pyAutoRef
project_urls =
    Bug Tracker = https://github.com/MohammedSunoqrot/pyAutoRef/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    SimpleITK
    Pillow
    pydicom
    scikit-image
    onnxruntime
    matplotlib>=3.0.0

[options.packages.find]
where = src

[options.package_data]
pyAutoRef = model.onnx
